--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 Common/Source/IntegratedGenes/.vs/
 Common/Source/IntegratedGenes/obj/
+
+*/Common/Source/IntegratedGenes/.vs/
+*/Common/Source/IntegratedGenes/obj/
