--- a/1.5/Common/Source/IntegratedGenes/IntegratedGenes.csproj
+++ b/1.5/Common/Source/IntegratedGenes/IntegratedGenes.csproj
@@ -63,6 +63,8 @@
     <Compile Include="DefExtensions\DefExtension_LeadershipTuning.cs" />
     <Compile Include="DefExtensions\DefExtension_NeedGenetic.cs" />
     <Compile Include="DefExtensions\DefExtension_PsychicGene.cs" />
+    <Compile Include="Genes\Fleshbeast\Gene_FleshbeastMutating.cs" />
+    <Compile Include="Genes\Fleshbeast\IntegratedFleshbeastUtility.cs" />
     <Compile Include="Genes\Gene_FrailDigestion.cs" />
     <Compile Include="Genes\Gene_GeneticBiosculpt.cs" />
     <Compile Include="Genes\Gene_HediffAnnual.cs" />
