Migrate to Linux and newest RW
Added JB Rider files to gitignore.
Added a dependency that will probably break stuff in the future.
Refactored obsolete references to HasGene into HasActiveGene.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ Common/Source/IntegratedGenes/obj/
 
 */Common/Source/IntegratedGenes/.vs/
 */Common/Source/IntegratedGenes/obj/
+
+*/Common/Source/IntegratedGenes/.idea
+*/Common/Source/IntegratedGenes/packages
