--- a/1.5/Common/Source/IntegratedGenes/IntegratedGenes.csproj
+++ b/1.5/Common/Source/IntegratedGenes/IntegratedGenes.csproj
@@ -64,6 +64,7 @@
     <Compile Include="DefExtensions\DefExtension_NeedGenetic.cs" />
     <Compile Include="DefExtensions\DefExtension_PsychicGene.cs" />
     <Compile Include="Genes\Fleshbeast\Gene_FleshbeastMutating.cs" />
+    <Compile Include="Genes\Fleshbeast\Gene_FleshbeastRegenerating.cs" />
     <Compile Include="Genes\Fleshbeast\IntegratedFleshbeastUtility.cs" />
     <Compile Include="Genes\Gene_FrailDigestion.cs" />
     <Compile Include="Genes\Gene_GeneticBiosculpt.cs" />
